Split task to multi small tasks

--- a/roles/ocp_installer/templates/install-config.j2
+++ b/roles/ocp_installer/templates/install-config.j2
@@ -20,5 +20,5 @@ networking:
 platform:
   none: {}
 fips: false
-pullSecret: '{{ env.pullSecret }}'
-sshKey: '{{ env.sshKey }}'
+pullSecret: '{{ pullsecret.stdout }}'
+sshKey: '{{ sshkey.stdout }}'
