--- a/roles/ocp_install/templates/dns.j2
+++ b/roles/ocp_install/templates/dns.j2
@@ -1,34 +1,34 @@
-server={{ env.dns }}
+server={{ dns }}
 
-host-record={{ nodes.bastion.name }}.{{ env.clusterName }}.{{ env.baseDomain }},{{ nodes.bastion.ip }}
-host-record={{ nodes.bootstrap.name }}.{{ env.clusterName }}.{{ env.baseDomain }},{{ nodes.bootstrap.ip }}
-{% for node in nodes.master %}
-host-record={{ node.name }}.{{ env.clusterName }}.{{ env.baseDomain }},{{ node.ip }}
+host-record={{ bastion.name }}.{{ clusterName }}.{{ baseDomain }},{{ bastion.ip }}
+host-record={{ bootstrap.name }}.{{ clusterName }}.{{ baseDomain }},{{ bootstrap.ip }}
+{% for node in master %}
+host-record={{ node.name }}.{{ clusterName }}.{{ baseDomain }},{{ node.ip }}
 {% endfor %}
-{% for node in nodes.worker %}
-host-record={{ node.name }}.{{ env.clusterName }}.{{ env.baseDomain }},{{ node.ip }}
+{% for node in worker %}
+host-record={{ node.name }}.{{ clusterName }}.{{ baseDomain }},{{ node.ip }}
 {% endfor %}
-{% for node in nodes.master %}
-host-record=etcd-{{ loop.index - 1 }}.{{ env.clusterName }}.{{ env.baseDomain }},{{ node.ip }}
+{% for node in master %}
+host-record=etcd-{{ loop.index - 1 }}.{{ clusterName }}.{{ baseDomain }},{{ node.ip }}
 {% endfor %}
-{% for node in nodes.master %}
-srv-host=_etcd-server-ssl._tcp.ibm.cp.example,etcd-{{ loop.index - 1 }}.{{ env.clusterName }}.{{ env.baseDomain }},2380,0,10
+{% for node in master %}
+srv-host=_etcd-server-ssl._tcp.ibm.cp.example,etcd-{{ loop.index - 1 }}.{{ clusterName }}.{{ baseDomain }},2380,0,10
 {% endfor %}
-host-record=api.{{ env.clusterName }}.{{ env.baseDomain }},{{ nodes.bastion.ip }}
-host-record=api-int.{{ env.clusterName }}.{{ env.baseDomain }},{{ nodes.bastion.ip }}
+host-record=api.{{ clusterName }}.{{ baseDomain }},{{ bastion.ip }}
+host-record=api-int.{{ clusterName }}.{{ baseDomain }},{{ bastion.ip }}
 
-address=/{{ nodes.bastion.name }}.{{ env.clusterName }}.{{ env.baseDomain }}/{{ nodes.bastion.ip }}
-address=/{{ nodes.bootstrap.name }}.{{ env.clusterName }}.{{ env.baseDomain }}/{{ nodes.bootstrap.ip }}
-{% for node in nodes.master %}
-address=/{{ node.name }}.{{ env.clusterName }}.{{ env.baseDomain }}/{{ node.ip }}
+address=/{{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}/{{ bastion.ip }}
+address=/{{ bootstrap.name }}.{{ clusterName }}.{{ baseDomain }}/{{ bootstrap.ip }}
+{% for node in master %}
+address=/{{ node.name }}.{{ clusterName }}.{{ baseDomain }}/{{ node.ip }}
 {% endfor %}
-{% for node in nodes.worker %}
-address=/{{ node.name }}.{{ env.clusterName }}.{{ env.baseDomain }}/{{ node.ip }}
+{% for node in worker %}
+address=/{{ node.name }}.{{ clusterName }}.{{ baseDomain }}/{{ node.ip }}
 {% endfor %}
-address=/apps.{{ env.clusterName }}.{{ env.baseDomain }}/{{ nodes.bastion.ip }}
-address=/.apps.{{ env.clusterName }}.{{ env.baseDomain }}/{{ nodes.bastion.ip }}
-address=/api.{{ env.clusterName }}.{{ env.baseDomain }}/{{ nodes.bastion.ip }}
-address=/api-int.{{ env.clusterName }}.{{ env.baseDomain }}/{{ nodes.bastion.ip }}
-{% for node in nodes.master %}
-address=/etcd-{{ loop.index - 1 }}.{{ env.clusterName }}.{{ env.baseDomain }}/{{ node.ip }}
+address=/apps.{{ clusterName }}.{{ baseDomain }}/{{ bastion.ip }}
+address=/.apps.{{ clusterName }}.{{ baseDomain }}/{{ bastion.ip }}
+address=/api.{{ clusterName }}.{{ baseDomain }}/{{ bastion.ip }}
+address=/api-int.{{ clusterName }}.{{ baseDomain }}/{{ bastion.ip }}
+{% for node in master %}
+address=/etcd-{{ loop.index - 1 }}.{{ clusterName }}.{{ baseDomain }}/{{ node.ip }}
 {% endfor %}
