--- a/roles/ocp_install/templates/install-config.j2
+++ b/roles/ocp_install/templates/install-config.j2
@@ -1,5 +1,5 @@
 apiVersion: v1
-baseDomain: {{ env.baseDomain }}
+baseDomain: {{ baseDomain }}
 compute:
 - hyperthreading: Enabled
   name: worker
@@ -9,7 +9,7 @@ controlPlane:
   name: master
   replicas: 3
 metadata:
-  name: {{ env.clusterName }}
+  name: {{ clusterName }}
 networking:
   clusterNetwork:
   - cidr: 10.128.0.0/14
