--- a/templates/haproxy.j2
+++ b/templates/haproxy.j2
@@ -2,7 +2,7 @@
 # Example configuration for a possible web application.  See the
 # full configuration options online.
 #
-#   http://haproxy.1wt.eu/download/1.4/doc/configuration.txt
+#   https://www.haproxy.org/download/1.8/doc/configuration.txt
 #
 #---------------------------------------------------------------------
 
@@ -35,6 +35,10 @@ global
     # turn on stats unix socket
     stats socket /var/lib/haproxy/stats
 
+    # utilize system-wide crypto-policies
+    ssl-default-bind-ciphers PROFILE=SYSTEM
+    ssl-default-server-ciphers PROFILE=SYSTEM
+
 #---------------------------------------------------------------------
 # common defaults that all the 'listen' and 'backend' sections will
 # use if not designated in their block
@@ -60,7 +64,8 @@ defaults
 #---------------------------------------------------------------------
 # main frontend which proxys to the backends
 #---------------------------------------------------------------------
-frontend  main *:5000
+frontend main
+    bind *:5000
     acl url_static       path_beg       -i /static /images /javascript /stylesheets
     acl url_static       path_end       -i .jpg .gif .png .css .js
 
@@ -83,7 +88,6 @@ backend app
     server  app2 127.0.0.1:5002 check
     server  app3 127.0.0.1:5003 check
     server  app4 127.0.0.1:5004 check
-
 
 backend openshift-api-server
     balance source
