--- a/templates/install-config.j2
+++ b/templates/install-config.j2
@@ -21,16 +21,16 @@ platform:
   none: {}
 fips: false
 {% if online == false  %}
-pullSecret: '{"auths":{"{{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}":{"auth":"{{ ('init:'+registryPassword) | b64encode }}"}}}'
+pullSecret: '{"auths":{"{{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}:8443":{"auth":"{{ ('init:'+registryPassword) | b64encode }}"}}}'
 sshKey: '{{ sshkey.stdout }}'
 additionalTrustBundle: |
 {{ (mirrorRegistryCA['content'] | b64decode) | indent(width=2,first=True) }}
 imageContentSources:
 - mirrors:
-  - {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}:8443/{{ reponame }}/release
+  - {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}:8443/{{ reponame }}/openshift/release
   source: quay.io/openshift-release-dev/ocp-v4.0-art-dev
 - mirrors:
-  - {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}:8443/{{ reponame }}/release-images
+  - {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}:8443/{{ reponame }}/openshift/release-images
   source: quay.io/openshift-release-dev/ocp-release
 {% else%}
 pullSecret: '{{ pullsecret.stdout }}'
